--- a/css/snugbox-ie8.css
+++ b/css/snugbox-ie8.css
@@ -1,11 +1,11 @@
 /* needed in separate css file for polyfill to stop affecting ie9 as well */
 
-.russiandoll-img {
+.snugbox-img {
 	/* ie8 polyfill. Use absolute path.	*/
 	-ms-behavior: url(/libs/backgroundsize.min.htc);
 }
 
-.no-background-size .russiandoll-img {
+.no-background-size .snugbox-img {
 	overflow: hidden;
 	position: relative;
 	z-index: 9;
