modified example 2 and got ready for live demo

--- a/css/snugbox-ie8.css
+++ b/css/snugbox-ie8.css
@@ -5,6 +5,10 @@
 	-ms-behavior: url(/libs/backgroundsize.min.htc);
 }
 
+.hideimg {
+	display: none;
+}
+
 .no-background-size .snugbox-img {
 	overflow: hidden;
 	position: relative;
